src/App.css
#sideContainer {
    display: flex;
    flex-direction: column;
    width: 18%;
    margin-left: 5px;
}

#calendar {
    height: 99vh;
    width: 80%;
}

#container {
    display: flex;
    padding: 5px;
}

.pickerBox {
    border: 1px solid #ddd;
    padding: 5px;
    margin-bottom: 10px;
    padding-top: 12px;
}

.boxLabel {
    margin-bottom: -9px;
    background: white;
    margin-left: 10px;
    z-index: 10;
    display: table;
    padding: 0 3px 0 3px;
    border: 1px solid #ddd;
    border-radius: 5px;
}

.option:hover {
    background: #ededed;
    cursor: pointer;
}

.shiftTitle {
    display: inline;
}

.shiftInfo {
    float: right;
    font-style: italic;
    display: inline;
}

.selected {
    background: #c3bebe;
}

.optionsModal {
    position: absolute;
    top: 40px;
    left: 40px;
    right: 40px;
    bottom: 40px;
    background-color: white;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.3);
    border-radius: 10px;
    border: 1px solid #ddd;
    padding: 10px;
}

.optionsModalOverlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
}

.optionsModal, .optionsModalOverlay:focus {
    outline: none;
}

